Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
None
-
None
Description
Guththila neglects spacing and formatting between nodes. This behavior contradicts to that of libxml2. Thus, If I open a file then deserialize it and build our OM Model, then print it to the terminal, I have lost the formatting in the file. This is because the parser simply filters out the whitespace. This behavior would make our parsing inconsistent.
Regards,
Senaka
Attachments
Issue Links
- is related to
-
AXIS2C-827 axiom_node_get_next_sibling is not working correctly
- Resolved