Fixing JIRA Issue AXIS2C-963